--- a/styles/style.css
+++ b/styles/style.css
@@ -67,3 +67,10 @@ div#formulario > p {
     font-size: 0.8em;
     text-align: center;
 }
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+}
