--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ section#login {
 
     background-color: white;
     width: 300px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.562);
 
@@ -68,9 +68,55 @@ div#formulario > p {
     text-align: center;
 }
 
+form > div.campo {
+    display: block;
+    background-color: var(--cor2);
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
 form > input[type=submit] {
     display: block;
     font-size: 1em;
     width: 100%;
     height: 40px;
+    background-color: var(--cor1);
+    border: none;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+form > input[type=submit]:hover {
+    background-color: #40918e;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    width: 100%;
+    height: 40px;
+    font-size: 1em;
+    padding-top: 5px;
+    margin-top: 5px;
+    color: #275755;
+    background-color: white;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: 0.5s;
+}
+
+form > a.botao:hover {
+    background-color: #67f3ee;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
+    
 }
