--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -15,6 +15,7 @@
 
     section#login {
         width: 90vw;
+        height: 290px;
     }
 
     section#login > div#imagem {
@@ -40,6 +41,7 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -61,5 +63,6 @@
     div#formulario > p {
         font-size: 1.1em;
         text-align: center;
+        margin: 20px 0px;
     }
 }
