--- a/styles/style.css
+++ b/styles/style.css
@@ -41,8 +41,10 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.562);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+
 }
 
 section#login > div#imagem {
@@ -73,13 +75,38 @@ form > div.campo {
     background-color: var(--cor2);
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border: 2px solid;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label {
     display: none;
 }
+
+div.campo > i {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #67f3ee;
+    font-size: 1em;
+    width: calc(100% - 44px);
+    transform: translateY(-12px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px
+    transform: translateY(-12px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+}
+
 
 form > input[type=submit] {
     display: block;
